--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
-  "name": "ғᴀʟʟᴇɴ ᴍᴜsɪᴄ",
-  "logo": "https://telegra.ph/file/89cbc8b8760b6abff430f.jpg",
+  "name": "💖ꜛ⟬꯭࿊꯭ɴ꯭፝֟𝐄 ꯭꯭༓ ꯭𝐋꯭ᴏ፝֟ꪜ꯭𝐄 ꯭༓꯭ 𝐌꯭ᴜ꯭፝֟sɪ꯭𝐂꯭⟭ꜛ💖",
+  "logo": "https://telegra.ph/file/988bb4cc5867257ea8fca.jpg",
   "description": "A SuperFast VC Player bot to play songs in Telegram Video Chat. Powered by PyTgCalls.",
   "keywords": ["music", "voicechat", "telegram", "steffen"],
   "repository": "https://github.com/Pkginstallsteffen/Alexia-X-Steffen",
@@ -35,17 +35,17 @@
     "OWNER_USERNAME": {
       "description": "Username of the person who will known as owner of the bot, without @",
       "required": false,
-      "value": "STEFFEN999"
+      "value": "King_of_Izzy"
     },
     "SUPPORT_GROUP": {
       "description": "Username of the group where users will go and disturb you, without @",
       "required": false,
-      "value": "We_love_eachother"
+      "value": "tamil_chat_junctioms"
     },
     "SUDO_USERS": {
       "description": "User IDs of the users who will counted as admin everywhere (if more than one separate them by space).",
       "required": true,
-      "value": "5500487064"
+      "value": "5488081672"
     },
     "START_IMG": {
       "description": "Telegraph link of the pic which you want to set as the start pic of your bot",
@@ -63,7 +63,7 @@
     "DURATION_LIMIT": {
       "description": "Max audio duration limit for downloads (minutes).",
       "required": false,
-      "value": "120"
+      "value": "500"
     }
   }
 }
